--- a/examples/white-green_style_twitter.css
+++ b/examples/white-green_style_twitter.css
@@ -1,6 +1,8 @@
 
-/* Styling for Twitter Widget */
-
+/*
+ * Styling for Twitter Widget.
+ * White / Green Colorscheme.
+ */
 
 
 body .timeline-header,
@@ -13,7 +15,10 @@ body .timeline-header {
 body .timeline-footer {
 	border-radius: 0 0 3px 3px;
 }
-html .timeline-header .summary, html .timeline-header .summary a:link, html .timeline-header .summary a:visited, html .p-author a.profile:hover {
+html .timeline-header .summary,
+html .timeline-header .summary a:link,
+html .timeline-header .summary a:visited,
+html .p-author a.profile:hover {
 	color: #00722d;
 }
 
