--- a/examples/another_blue_one_style_twitter.css
+++ b/examples/another_blue_one_style_twitter.css
@@ -1,22 +1,36 @@
-
 /*
  * Styling for Twitter Widget.
- * Brown Colorscheme.
+ * Another Blue Color Scheme.
  */
 
 
 html,
-html .SandboxRoot,
-html .p-author .profile .p-name,
-html .custom-timeline-owner-profile .p-name,
-html .env-narrow .header .profile .p-name {
-	color: #016295;
+html .SandboxRoot {
+	color: #003463;
+}
+
+html body {
+	font-family: 'Open Sans', Arial, Verdana, sans-serif;
+	color: #2d2c2e;
+}
+
+html body .p-author .profile .p-name,
+html body .custom-timeline-owner-profile .p-name,
+html body .env-narrow .header .profile .p-name,
+html body .p-name.customisable-highlight {
+	color: #072b4d;
 }
 
 body .timeline-header,
 body .timeline-footer {
-	background-color: #CD6715;
+	background-color: #003463;
+	background-image: -moz-linear-gradient(top, #355483, #003463);
+	background-image: -ms-linear-gradient(top, #355483, #003463);
+	background-image: -webkit-linear-gradient(top, #355483, #003463);
+	background-image: -o-linear-gradient(top, #355483, #003463);
+	background-image: linear-gradient(top, #355483, #003463);
 }
+
 body .timeline-header {
 	border-radius: 3px 3px 0 0;
 }
@@ -27,7 +41,7 @@ html .timeline-header .summary,
 html .timeline-header .summary a:link,
 html .timeline-header .summary a:visited,
 html .p-author a.profile:hover {
-	color: #fff;
+	color: #FFFFEE;
 }
 
 /* Follow Button */
@@ -41,15 +55,15 @@ html .thm-dark .timeline-header a.follow-button:visited,
 html .thm-dark .timeline-header a.follow-button:hover,
 html .thm-dark .timeline-header a.follow-button:focus,
 html .thm-dark .timeline-header a.follow-button:active {
-	color: #CD6715;
+	color: #003463;
 }
 html .follow-button:link,
 html .follow-button:visited {
-	background-color: #fff;
-	background-image: linear-gradient(#fff, #ddd);
-	border: 1px solid #ccc;
+	background-color: #FFFFEE;
+	background-image: linear-gradient(#FFFFEE, #FFFFDD);
+	border: 1px solid #eeeedd;
 	border-radius: 2px;
-	color: #CD6715;
+	color: #016295;
 	cursor: pointer;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 	white-space: nowrap;
@@ -57,7 +71,7 @@ html .follow-button:visited {
 
 h2.byline {
 	display: none;
-	color: #fff;
+	color: #FFFFEE;
 }
 body .timeline .timeline-header h2.byline a:link,
 body .timeline .timeline-header h2.byline a:hover,
@@ -66,42 +80,32 @@ body .timeline .timeline-header h2.byline a:visited {
 	color: #FFFFEE;
 }
 
-body .timeline,
-html .timeline .stream {
-	background-color: #CD6715;
-	color: #fff;
+body .timeline {
+	background-color: #FFFFEE;
+	background-repeat: repeat-x;
+	background-image: -moz-linear-gradient(top, #FFFFEE, #eeeedd);
+	background-image: -ms-linear-gradient(top, #FFFFEE, #eeeedd);
+	background-image: -webkit-linear-gradient(top, #FFFFEE, #eeeedd);
+	background-image: -o-linear-gradient(top, #FFFFEE, #eeeedd);
+	background-image: linear-gradient(top, #FFFFEE, #eeeedd);
+	border-color: #f9f9f6;
 }
+
 
 body .timeline a:link,
 body .timeline a:visited {
-	color: #FD8725;
+	color: #072b4d;
 	text-decoration: none;
 }
 
 body .timeline a:active,
 body .timeline a:hover {
-	color: #FD8725;
+	color: #072b4d;
 	text-decoration: underline;
 }
 
-.timeline .p-author .profile .p-name,
-html .timeline .stream a:link,
-html .timeline .stream a:visited,
-html .timeline .stream a:hover,
-html .timeline .stream a:active {
-	color: #fff;
-}
-html,
-html .p-author .profile .p-name,
-html .cards-base p,
-html .cards-base p a,
-html .timeline-header .summary,
-html .timeline-header .summary a:link,
-html .timeline-header .summary a:visited,
-html .p-author a.profile:hover
-html .p-name, .p-author a.profile:focus .p-name {
-	color: #fff;
-}
-html .timeline .customisable-border {
+/* Orange dotted border for each tweet */
+html body li.customisable-border {
+	border-color: #072b4d;
 	border-style: dotted;
 }
